# databrary

./: .gitignore  .travis.yml  Blaze-ByteString-Builder-Html-Word.html  Control-Invert.html  Data-ByteString-Builder-Escape.html  Data-RangeSet-Parse.html  Databrary-Action-Form.html  Databrary-Action-Request.html  Databrary-Action-Response.html  Databrary-Action-Route.html  Databrary-Action-Run.html  Databrary-Action-Types.html  Databrary-Action.html  Databrary-Context.html  Databrary-Controller-API.html  Databrary-Controller-Activity.html  Databrary-Controller-Analytics.html  Databrary-Controller-Angular.html  Databrary-Controller-Asset.html  Databrary-Controller-AssetSegment.html  Databrary-Controller-Authorize.html  Databrary-Controller-CSV.html  Databrary-Controller-Citation.html  Databrary-Controller-Comment.html  Databrary-Controller-Container.html  Databrary-Controller-Excerpt.html  Databrary-Controller-Form.html  Databrary-Controller-Format.html  Databrary-Controller-Funding.html  Databrary-Controller-IdSet.html  Databrary-Controller-Ingest.html  Databrary-Controller-Login.html  Databrary-Controller-Metric.html  Databrary-Controller-Notification.html  Databrary-Controller-Party.html  Databrary-Controller-Paths.html  Databrary-Controller-Periodic.html  Databrary-Controller-Permission.html  Databrary-Controller-Record.html  Databrary-Controller-Register.html  (+600 more)
Control/: Invert.hs
Data/RangeSet/: Parse.hs
Databrary/: Has.hs  Main.hs  Routes.hs  Warp.hs  Web.hs
Databrary/Action/: Form.hs  Response.hs  Route.hs  Run.hs  Types.hs
Databrary/Controller/: Citation.hs  CitationBuilder.hs  Notification.hs  Style.hs
Databrary/EZID/: Service.hs
Databrary/HTTP/: Client.hs
Databrary/Model/: Enum.hs  Measure.hs  ORCID.hs  RecordSlot.hs  Segment.hs  URL.hs
Databrary/Parsers/: datavyu.hs
Databrary/Routes/: API.hs
Databrary/Service/: DB.hs  Init.hs  Log.hs  Mail.hs  Messages.hs  Notification.hs
Databrary/Setup/: DB.hs
Databrary/Solr/: Index.hs  Search.hs  Service.hs
Databrary/Static/: Service.hs
Databrary/Store/: Config.hs  Service.hs  Transcoder.hs  Zip.hs
Databrary/View/: Angular.hs  Container.hs  Form.hs  Template.hs  VolumeAccess.hs  Zip.hs
Databrary/Web/: All.hs  Coffee.hs  Constants.hs  Generate.hs  JSHint.hs  Libs.hs  Rules.hs  Stylus.hs  Uglify.hs
Docker/: README.md  docker-base-build.yml  docker-build.yml  docker-compose-base.yml  docker-compose.yml  docker_build.sh  wait-for-postgres.sh  wait-for-solr.sh
Docker/databrary/: Dockerfile  Dockerfile_base  Dockerfile_config  Dockerfile_final  databrary-entrypoint.sh  ssmtp.conf
Docker/postgres/: Dockerfile  init-user-db.sh  remove-superuser-db.sh
Docker/redis/: redis.conf  redis.sh
Docker/solr/: Dockerfile
Paths_databrary/: Node.hs
Schemabrary/: schemabrary.cabal  stack.yaml
app/assets/: angular.purs  dom.purs  main.purs  util.purs
app/views/: template.scala.html
config/: README.md  config.go  config_test.go  databrary_dev.toml  databrary_test.toml
config/sqlboiler/: sqlboiler.toml
config/ssl/: cert.pem  key.pem
config/xo_templates/: postgres.proc.go.tpl
controllers/routes/: view_user.go
db/: README.md  util.go
db/models/: accounttoken.xo.go  asset.xo.go  assetreplace.xo.go  assetrevision.xo.go  audit.go  authorize.go  authorize.xo.go  authorizevalid.xo.go  authorizeview.xo.go  avatar.xo.go  category.xo.go  comment.xo.go  container.go  container.xo.go  datatype.xo.go  excerpt.xo.go  format.xo.go  funder.xo.go  keyworduse.xo.go  logintoken.xo.go  measure.xo.go  measureabstract.xo.go  measuredate.xo.go  measurenumeric.xo.go  measuretext.xo.go  metric.xo.go  notice.xo.go  noticedelivery.xo.go  notification.xo.go  notify.xo.go  notifyview.xo.go  party.go  permission.xo.go  record.xo.go  recordmeasure.xo.go  release.xo.go  session.xo.go  slot.go  slot.xo.go  slotasset.xo.go  (+22 more)
db/pgranges/: pgranges.sql
db/schema/: 0.sql  20170417-primary_keys.sql  20170418-varchar.sql  20170502-default_metric_options.sql  20170504-record_measures_view.sql  master_sql
db/sql_functions/: sp_assetreplace.xo.go  sp_castint.xo.go  sp_checkpermission.xo.go  sp_duration.xo.go  sp_gettag.xo.go  sp_intervalmiepoch.xo.go  sp_readpermission.xo.go  sp_readrelease.xo.go  sp_recorddaterange.xo.go  sp_recordrelease.xo.go  sp_recordreleaseparty.xo.go  sp_segment.xo.go  sp_segmentintersect.xo.go  sp_segments.xo.go  (+9 more)
logging/: logger.go  logger_test.go  logging.go
models/: audit.go  authorize.go  party.go  volume.go
project/: plugins.sbt
public/: index.html
routes/: api.go  login.go  static.go  throttle.go  user.go  util.go  view_user.go  volume.go
schema/: 0.sql  20170626-add-elan-format.sql
src/: Blaze.ByteString.Builder.Html.Word.html  Control.Invert.html  Data.ByteString.Builder.Escape.html  Data.RangeSet.Parse.html  Databrary-Store-AV.html  Databrary.Action.Form.html  Databrary.Action.Request.html  Databrary.Action.Response.html  Databrary.Action.Route.html  Databrary.Action.Run.html  Databrary.Action.Types.html  Databrary.Action.html  Databrary.Context.html  Databrary.Controller.API.html  Databrary.Controller.Activity.html  Databrary.Controller.Analytics.html  Databrary.Controller.Angular.html  Databrary.Controller.Asset.html  Databrary.Controller.AssetSegment.html  Databrary.Controller.Authorize.html  Databrary.Controller.CSV.html  Databrary.Controller.Citation.html  Databrary.Controller.Comment.html  Databrary.Controller.Container.html  Databrary.Controller.Excerpt.html  Databrary.Controller.Form.html  Databrary.Controller.Format.html  Databrary.Controller.Funding.html  Databrary.Controller.IdSet.html  Databrary.Controller.Ingest.html  Databrary.Controller.Login.html  Databrary.Controller.Metric.html  Databrary.Controller.Notification.html  Databrary.Controller.Party.html  Databrary.Controller.Paths.html  Databrary.Controller.Periodic.html  Databrary.Controller.Permission.html  Databrary.Controller.Record.html  Databrary.Controller.Register.html  Databrary.Controller.Root.html  (+241 more)
util/: util.go
web/: angular-route  app.js  autoprefixer-stylus  fake.css  lodash  ng-flow  nib  pivottable
(+398 files in other folders)
